--- a/real-timeDisplay/src/app/display/display.component.html
+++ b/real-timeDisplay/src/app/display/display.component.html
@@ -1,13 +1,19 @@
 <div class="display-container" id="displayContainer">
-  <button class="fullscreen-btn" (click)="goFullscreen()" title="Go Fullscreen">⛶</button>
-  <h3>Current Programme</h3>
   <div *ngIf="currentTitle !== 'No active programme'; else noActive">
     <div class="current-title">{{ currentTitle }}</div>
-    <div class="remaining-time" [ngStyle]="{'background-color': remainingColor, 'color': '#fff', 'padding': '0.5rem 1rem', 'border-radius': '6px', 'display': 'inline-block'}" [class.flashing]="remainingColor === 'red'">
-      Remaining Time: {{ remainingTime }}
+    <div class="remaining-time" [ngStyle]="{'background-color': remainingColor, 'color': '#fff', 'border-radius': '6px', 'display': 'flex', 'align-items': 'center', 'justify-content': 'center', 'width': '100vw', 'height': '75vh', 'margin': '0 auto'}" [class.flashing]="remainingColor === 'red'">
+      {{ remainingTime }}
     </div>
   </div>
   <ng-template #noActive>
     <div class="no-active">No active programme</div>
   </ng-template>
+  <button class="fullscreen-icon-btn" (click)="goFullscreen()" title="Go Fullscreen">
+    <svg width="44" height="44" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: middle;">
+      <polyline points="4 8 4 4 8 4" />
+      <polyline points="16 4 20 4 20 8" />
+      <polyline points="20 16 20 20 16 20" />
+      <polyline points="8 20 4 20 4 16" />
+    </svg>
+  </button>
 </div>
